# pypairtree

./: .travis.yml  README.md  requirements_dev.txt  setup.cfg  setup.py
pypairtree/: __init__.py  directorypairtreeobjectreader.py  directorypairtreeobjectwriter.py  directorypairtreereader.py  directorypairtreewriter.py  intraobjectbytestream.py  pairtree.py  pairtreeobject.py  utils.py
tests/: __init__.py  test_pypairtree.py
